simplified functions, adjust font sizes.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <title>Tim Time</title>
+        <title>Miller Time</title>
     </head>
         <body>
             <div class = "title-container">
-                <h1 id = "title">Tim Time</h1>
+                <h1 id = "title">Miller Time</h1>
                 <h2 id = "subtitle">A Digital Clock</h2>
             </div>
 
